--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "start:prod": "node ./dist/server.js",
     "start:dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "dev": "nodemon index.js"
   },
@@ -17,8 +19,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "form-data": "^4.0.0",
-    "mongoose": "^8.5.0",
-    "multer": "^1.4.5-lts.1"
+    "mongoose": "^8.5.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
